# learn-opengl

./: .gitignore  CMakeLists.txt
src/: glad.c  main.cpp  shader.cpp  shader.h
src/shaders/: 3.3.shader.fs  3.3.shader.vs
